package main;
import javax.swing.JFrame;

public class GUI extends JFrame {

}
