package main;
import utente.*; //Collego il package utente alla classe Main
import scheda_allenamento.*; //Collego il package scheda_allenamento alla classe Main

public class Main {

}
