package scheda_allenamento;

public class Allenamento {

}
