package scheda_allenamento;

public class SchedaAllenamento {

}
