package utente;
public class Admin extends Utente {

}
