package utente;
public class Cliente extends Utente {

}
