package utente;
public class Nutrizionista extends Utente {

}
