package utente;
public class PersonalTrainer extends Utente {

}
