@startuml Main.puml
!theme spacelab

class Main {
    +main(String[] args)
    --
    new GUI()
}

class Utente {
    -String nome
    -String cognome
    -String username
    -String password
    --
    +Utente()
    --
    +void visualizzaDati()
    +String getUsername()
    +void setUsername(String username)
    +String getPassword()
    +void setPassword(String password)
    +void creaSchedaAllenamento()
}

class Cliente extends Utente {
    +static void visualizzaSchedaAllenamento()
    +static void aggiornaSchedaAllenamento()
    +static void contattaPersonalTrainer()
    +static void contattaNutrizionista()
}

class Admin extends Utente {
    +void banUtente()
    +void modificaDatiUtente()
    +void visualizzaUtente() 
}

class PersonalTrainer extends Utente {
    +PersonalTrainer()
    --
    +void contattaUtente()
}

class Nutrizionista extends Utente {
    +Nutrizionista()
    --
    +void contattaUtente()
}

class GUI extends JFrame {
    -JTextField usernameField
    -JPasswordField passwordField
    -JButton loginButton
    --
    +GUI()
    +void actionPerformed(ActionEvent e)
}

class Allenamento {
    -String nomeAllenamento
    --
    +Allenamento()
}

class SchedaAllenamento {
    -ArrayList<Allenamento>
    --
    +SchedaAllenamento()
    --
    +void aggiungiAllenamento(Allenamento allenamento)
}

Main <.. GUI
GUI <.. Utente
GUI <.. SchedaAllenamento 
GUI <.. Allenamento

@enduml